cmake_minimum_required(VERSION 3.25)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 99)
project(libtmtk)
add_library(libtmtk "${CMAKE_CURRENT_SOURCE_DIR}/src/draconis/tmtk.c" "${CMAKE_CURRENT_SOURCE_DIR}/src/draconis/tmtk.h")
target_include_directories(libtmtk PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
