cmake_minimum_required(VERSION 3.25)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
project(TMTK)
add_library(TMTK "${CMAKE_CURRENT_SOURCE_DIR}/Sources/DragonsCave/Teco.cc" "${CMAKE_CURRENT_SOURCE_DIR}/Sources/DragonsCave/Teco.hh")
target_include_directories(TMTK PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Sources")
